--- a/rag-app/pyproject.toml
+++ b/rag-app/pyproject.toml
@@ -13,7 +13,7 @@ fastapi = "^0.115.0"
 uvicorn = "^0.30.6"
 sentence-transformers = "^3.1.1"
 python-dotenv = "^1.0.1"
-psycopg2 = "^2.9.9"
+psycopg2-binary = "^2.9.9" 
 llama-index = "^0.11.16"
 boto3 = "^1.35.36"
 pyyaml = "^6.0.2"
